# ECNDP

./: CMakeLists.txt  requirements.txt
algorithms/: greedy_algorithm.py  greedy_empty_set.py  greedy_mis.py  greedy_mis_algorithm.py  local_search.py
c_env/: CMakeCache.txt  Makefile  cmake_install.cmake  ecndp
c_env/algorithms/: exact.cpp  exact.hpp  greedy_empty_set.cpp  greedy_empty_set.hpp  greedy_mis.cpp  greedy_mis.hpp  improvement_condition.cpp  improvement_condition.hpp  local_search.cpp  local_search.hpp  main.cpp  utils.cpp  utils.hpp
notebooks/: experiment.ipynb  table_experiment.ipynb  toy_experiment_2.ipynb
python/: experiment.py  main.py  main_affinity_and_greedy.py
python/algorithms/: compute_PC.py  exact_algorithm_new.py  exact_gurobi.ipynb  exact_path_formulation.py  greedy_affinity.py  greedy_mis.py  greedy_mis_candidate.py  local_search.py  neighborhood_distance_heuristics.py  node_multiway_cut_heuristic.py
python/algorithms/exact/: exact_algorithm_new.py  exact_formulation.py  exact_path_cplex.py
python/algorithms/greedy/: greedy_empty_set.py  greedy_mis_candidate.py
python/algorithms/local_search/: local_search.py
python/experiments/: experiment_large_graph.py  experiment_medium_graph.py  main_exact_path.py  main_mis.py
python/experiments/main/: main_random.py
python/notebooks/: table_experiment.ipynb  visualization.ipynb
python/notebooks/basics/: toy_experiment.ipynb
python/notebooks/experiments/: gurobi.lic  new_heuristics.ipynb  (+1 more)
python/utils/: assign_terminals.py  helpers_for_PC.py  improvement_condition.py  utils.py
(+29 files in other folders)
